# cargo-lambda-repro

./: Cargo.toml  README.md  reproduce-bug.sh
.github/workflows/: reproduce-bug.yml  target-bug-test.yml
lambda-function/: Cargo.toml
lambda-function/src/: main.rs
