[package]
name = "cargo-lambda-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
lambda_web = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
